declarative/processor/src/test/resources/good/graph object of method is instance.java
package x;

import com.inrupt.rdf.wrapping.declarative.annotation.Graph;
import com.inrupt.rdf.wrapping.declarative.annotation.OptionalFirstObjectOfEither;
import com.inrupt.rdf.wrapping.declarative.annotation.Resource;

@Graph
interface X {
    @OptionalFirstObjectOfEither("x")
    Y x();

    @Resource
    interface Y {
    }
}
